codegen/tests/errors/struct_with_multiple_fields.stderr
error: struct must have exactly one field
 --> tests/errors/struct_with_multiple_fields.rs:4:17
  |
4 | struct FirstName(String, String);
  |                 ^^^^^^^^^^^^^^^^

error: struct must have exactly one field
  --> tests/errors/struct_with_multiple_fields.rs:7:13
   |
7  |   struct Name {
   |  _____________^
8  | |     first: String,
9  | |     last: String,
10 | | }
   | |_^
